buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
    }

    dependencies {
        classpath "com.adva:netemu:0.1.0-SNAPSHOT"
    }
}

plugins {
    id 'application'
    id 'groovy'
    id 'java'
    id 'java-library'
    id 'maven-publish'
}

apply plugin: 'application'
apply plugin: 'groovy'
apply plugin: 'java'
apply plugin: 'java-library'
apply plugin: 'maven-publish'


group = "emu.skeleton"
version = "0.1.0-SNAPSHOT"

application {
    mainClassName = "emu.skeleton.renameIt.Main"
}

sourceCompatibility = 17
targetCompatibility = 17


apply plugin: "com.adva.netemu"

netEmu {
    // definesContextInPackage "com.adva.netemu.example.jukebox"

    /*
    pythonizer {
        appendsYangModelsToFile "emu_jukebox/yang_models.py"
    }
    */
}

sourceSets {
    main.java.srcDirs += [
            "${buildDir}/${netEmu.yangToSources.mdSalOutputDir}",
            "${buildDir}/${netEmu.yangToSources.netEmuOutputDir}",
    ]
}


repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    gradleApi()
    localGroovy()

    implementation "com.adva:netemu:0.1.0-SNAPSHOT"
    annotationProcessor "com.adva:netemu:0.1.0-SNAPSHOT"

    testImplementation "org.spockframework:spock-core:2.0-M4-groovy-3.0"
}


compileJava {
    options.fork = true

    for (final javacPackage in ['code', 'util']) {

        /*  Adapted from https://github.com/projectlombok/lombok/issues/2681#issuecomment-805252645
        */
        options.forkOptions.jvmArgs += ['--add-opens', "jdk.compiler/com.sun.tools.javac.${javacPackage}=ALL-UNNAMED"
                as String] // GString not supported as JVM fork argument

        options.compilerArgs += ['--add-exports', "jdk.compiler/com.sun.tools.javac.${javacPackage}=ALL-UNNAMED"]
    }
}


test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}


jar {
    manifest {
        attributes 'Main-Class': "emu.skeleton.renameIt.Main"
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}
